# AdventOfCode2022

./: .gitignore  CMakeLists.txt  aoc_learned.md  conandata.yml  main.cpp
adventofcode2021/: run.cpp  run.h
adventofcode2021/puzzles/: day1.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h
adventofcode2021/tests/: methods.cpp  submissions.cpp
adventofcode2022/: learned.md  run.cpp  run.h
adventofcode2022/puzzles/: day1.h  day10.h  day11.h  day12.h  day14.h  day15.h  day16.h  day17.h  day2.h  day3.h  day4.h  day5.h  day6.h  day7.h  day8.h  day9.h  day_template.h
adventofcode2022/tests/: methods.cpp  submissions.cpp
aoc2023/: everything_bagel.h
aoc23/: day1.cpp  day1.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  day9.cpp  day9.h  everything_bagel.h
aoc23/template/: dayX.cpp  dayX.h
aoc24/: day1.cpp  day1.h  day10.cpp  day10.h  day11.cpp  day11.h  day12.cpp  day12.h  day13.cpp  day13.h  day14.cpp  day14.h  day15.cpp  day15.h  day16.cpp  day16.h  day17.cpp  day17.h  day18.cpp  day18.h  day19.cpp  day19.h  day2.cpp  day2.h  day3.cpp  day3.h  day4.cpp  day4.h  day5.cpp  day5.h  day6.cpp  day6.h  day7.cpp  day7.h  day8.cpp  day8.h  day9.cpp  day9.h  everything_bagel.h
aoc24/template/: dayX.cpp  dayX.h
cmake/: conan.cmake
puzzles/: day1.h  day2.h  day3.h  day4.h  day5.h  day6.h
reusables/: access_cell.h  anything_overlaps.h  apply_drawing.cpp  apply_drawing.h  are_touching.cpp  are_touching.h  binary_string_to_int.cpp  binary_string_to_int.h  cell_is_in_field.h  cells_are_in_container_filter.h  convert_to_grid.h  drawing_operation.h  dump.cpp  dump.h  exists_in.cpp  exists_in.h  fits_on_grid.cpp  fits_on_grid.h  get_all_cells.h  get_all_cells_with_value.h  get_direction_cartesian.cpp  get_direction_cartesian.h  get_interval_extremes.h  get_neighbour_cells.h  grabbag.cpp  grabbag.h  interval_inside_the_other.h  interval_overlaps_the_other.h  intervals_fully_contained.h  intervals_overlap.h  is_drawing_fully_on_canvas.h  iterate.cpp  manhattan_distance.h  move_cartesian.cpp  move_cartesian.h  move_drawing.h  move_if_not_blocked.h  move_screen.cpp  move_screen.h  move_to_next_pixel.cpp  (+14 more)
